--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </header>
     <main>
         <form>
-            <label for="nome">Nome</label><input type="text" id="nome"><br/>
-            <label for="email">E-mail</label><input type="email" id="email"><br/>
-            <label for="senha">Senha</label><input type="password" id="senha"><br/>
-            <input type="submit" value="Cadastrar">
+            <label for="nome">Nome </label><input type="text" id="nome"><br/>
+            <label for="email">E-mail </label><input type="email" id="email"><br/>
+            <label for="senha">Senha </label><input type="password" id="senha"><br/>
+            <button type="submit">Cadastrar</button>
         </form>
     </main>
 </body>
